# StarFieldShooter1D

./: .gitignore  README.md
StarFieldShooter1D/: CMakeLists.txt  dimensions.cpp  dimensions.h  main.cpp  starfieldgame.cpp  starfieldgame.h
StarFieldShooter1D-build/: CMakeCache.txt  Makefile  StarFieldShooter1D  StarFieldShooter1D.cbp  cmake_install.cmake
StarFieldShooter1D/Game/: CMakeLists.txt  CMakeLists.txt~  gamelogic.cpp  gamelogic.h
StarFieldShooter1D/Model/: CMakeLists.txt  dimensions.cpp  dimensions.h  drawable.cpp  drawable.h  playerdata.cpp  playerdata.h  playerdraw.cpp  playerdraw.h  playerprogram.cpp  playerprogram.h  playership.cpp  playership.h  position.cpp  position.h
StarFieldShooter1D/Model/Bullet/: CMakeLists.txt  bullet.cpp  bullet.h  bulletdraw.cpp  bulletdraw.h
StarFieldShooter1D/Model/Player/: CMakeLists.txt  playerdata.h  playerdraw.cpp  playerdraw.h  playerprogram.cpp  playerprogram.h  playership.cpp  playership.h
StarFieldShooter1D/OpenGL/: CMakeLists.txt  InputManager.cpp  InputManager.h  abstractdata.cpp  abstractdata.h  abstractprogram.cpp  abstractprogram.h  openglmanager.cpp  openglmanager.h  programmable.h
StarFieldShooter1D/Shaders/: piece.fs.glsl  piece.vs.glsl
StarFieldShooter1D/Util/: CMakeLists.txt  CMakeLists.txt~  Logger.cpp  Logger.h  shader_utils.cpp
